--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,5 @@
 <app-nav></app-nav>
 
 <div class="container" style="margin-top: 100px">
-    <ul>
-        <h1>11111111111111</h1>
-        <li *ngFor='let user of users'>{{user.id}} - {{user.userName}}</li>
-    </ul>
+    <router-outlet></router-outlet>
 </div>
